adding xmx